name:                cloud-haskell-play
version:             0.1.0.0
synopsis:            Playing with distributed haskell
-- description:         
homepage:            https://github.com/alanz/cloud-haskell-play
license:             PublicDomain
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cloud-haskell-play
  main-is:             main.hs
  ghc-options:
    -- The -threaded and -with-rtsopts=-T are needed for EKG
    -threaded
    -with-rtsopts=-T
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                       , distributed-process
                       , distributed-process-platform
                       , network-transport
                       , network-transport-tcp
                       , bytestring
                       , rematch
                       , distributed-static
                       , binary
                       , time
                       , thyme
                       , vector-space
                       , lens
  hs-source-dirs:      ./src
  default-language:    Haskell2010

executable simplesupervisor
  main-is:             simplesupervisor.hs
  ghc-options:
    -- The -threaded and -with-rtsopts=-T are needed for EKG
    -threaded
    -with-rtsopts=-T
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                       , distributed-process
                       , distributed-process-platform
                       , network-transport
                       , network-transport-tcp
                       , bytestring
                       , rematch
                       , distributed-static
                       , binary
                       , time
                       , thyme
                       , vector-space
                       , lens
  hs-source-dirs:      ./src
  default-language:    Haskell2010

executable simplesupgenserver
  main-is:             simplesupgenserver.hs
  ghc-options:
    -- The -threaded and -with-rtsopts=-T are needed for EKG
    -threaded
    -with-rtsopts=-T
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                       , distributed-process
                       , distributed-process-platform
                       , network-transport
                       , network-transport-tcp
                       , bytestring
                       , rematch
                       , distributed-static
                       , binary
                       , time
                       , thyme
                       , vector-space
                       , lens
  hs-source-dirs:      ./src
  default-language:    Haskell2010

executable timevsthyme
  main-is:             timevsthyme.hs
  ghc-options:
    -- The -threaded and -with-rtsopts=-T are needed for EKG
    -threaded
    -with-rtsopts=-T
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                       , distributed-process
                       , distributed-process-platform
                       , network-transport
                       , network-transport-tcp
                       , bytestring
                       , rematch
                       , distributed-static
                       , binary
                       , time
                       , thyme
                       , vector-space
                       , lens
  hs-source-dirs:      ./src
  default-language:    Haskell2010

source-repository head
  type:      git
  location:  https://github.com/alanz/cloud-haskell-play


